force-app/main/default/objects/Event_Organizer__c/Event_Organizer__c.object-meta.xml
<CustomObject>
    <description>Organizer of the events</description>
    <label>Event Organizer</label>
    <nameField>
        <label>Event Organizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>