force-app/main/default/objects/Event_Organizer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Address of event organizer</description>
    <inlineHelpText>Address of event organizer</inlineHelpText>
    <label>Address</label>
    <referenceTo>Address_Book__c</referenceTo>
    <relationshipLabel>Event Organizers</relationshipLabel>
    <relationshipName>Event_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>