force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description>Alternative phone number of event organizer</description>
    <inlineHelpText>Alternative phone number of event organizer</inlineHelpText>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>